# rusty-fork

./: Cargo.toml  README.md
src/: fork.rs  fork_test.rs  lib.rs
two-rusty-forks-macro/: Cargo.toml
two-rusty-forks-macro/src/: lib.rs
