[package]
name = "two-rusty-forks"
version = "0.4.0"
authors = ["Jason Lingle", "Ivan Nikulin <ifaaan@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/altsysrq/rusty-fork"
documentation = "https://docs.rs/rusty-fork"
keywords = ["testing", "process", "fork"]
categories = ["development-tools::testing"]
exclude = ["/gen-readme.sh", "/readme-*.md"]
edition = "2018"

description = """
Cross-platform library for running Rust tests in sub-processes using a
fork-like interface.
"""

[badges]
travis-ci = { repository = "AltSysrq/rusty-fork" }

[workspace]
members = ["two-rusty-forks-macro"]

[dependencies]
fnv = "1.0"
quick-error = "1.2"
two-rusty-forks-macro = { path = "two-rusty-forks-macro", version = "0.4.0", optional = true }
tempfile = "3.0"
wait-timeout = { version = "0.2", optional = true }

[dev-dependencies]

[features]
default = [ "timeout" ]
macro = [ "two-rusty-forks-macro" ]
timeout = [ "wait-timeout" ]
